<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.fhnw.prog2</groupId>
    <artifactId>tde</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Topo Data Explorer</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <checkstyle.config.dir>${project.basedir}/config</checkstyle.config.dir>
        <checkstyle.version>13.3.0</checkstyle.version>

        <main.class>tde.TDE</main.class>

        <!-- maven plugin versions -->
        <maven-compiler.version>3.15.0</maven-compiler.version>
        <maven-surefire.version>3.5.5</maven-surefire.version>
        <maven-shade.version>3.6.2</maven-shade.version>
        <maven-checkstyle.version>3.6.0</maven-checkstyle.version>
        <maven-site.version>3.21.0</maven-site.version>
        <maven-javadoc.version>3.12.0</maven-javadoc.version>
        <maven-project-info.version>3.9.0</maven-project-info.version>
        <maven-javafx.version>0.0.8</maven-javafx.version>

        <!-- versions of dependencies -->
        <commons-csv.version>1.14.1</commons-csv.version>
        <javafx.version>25.0.2</javafx.version>

        <junit.version>6.0.3</junit.version>

    </properties>

    <build>
        <plugins>
            <!-- configure compiler plugin -->
            <!-- java version set <maven.compiler.release> property, see above -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
            </plugin>

            <!-- The surefire plugin controls the unit-tests during the test phase -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <configuration>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <!-- The following plugin is used to create a runnable jar file -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade.version}</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <minimizeJar>true</minimizeJar>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>${main.class}</mainClass>
                        </transformer>
                    </transformers>
                    <filters>
                        <!-- to avoid the META warnings and prevent conflicts in
                             MANIFEST.MD files, you can add the following configuration
                        -->
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- The following plugin is used to check the code style -->
            <!-- The style check is done in the prepare-package phase.
				 reasoning:
				   - style checks violations might enforce code changes
				   - code changes should only be done on tested code
				   - prepare-package phase is executed after the test phase, ensuring green tests
			-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <violationSeverity>warning</violationSeverity>
                    <configLocation>${checkstyle.config.dir}/fhnw_checks.xml</configLocation>
                    <!-- suppressionsLocation>${checkstyle.config.dir}/suppressions.xml</suppressionsLocation> -->
                </configuration>
                <executions>
                    <execution>
                        <!-- Run checkstyle after testing. This ensures that all necessary
					     class files exist and checkstyle can run without warnings. -->
                        <id>checkstyle</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--
                The following plugin is used to create the project site
                Run mvn site to generate a html website.
                View the site at ${project.basedir}/target/site/index.html
			-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven-site.version}</version>
            </plugin>

            <!-- configure javafx plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${maven-javafx.version}</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <options>
                                <option>--enable-native-access=javafx.graphics</option>
                            </options>
                            <mainClass>tde.TDE</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>

            <!-- Info Reports Plugin generates standard reports for the specified project.
			 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info.version}</version>
            </plugin>
            <!-- configure for javadoc report generation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc.version}</version>
                <configuration>
                    <show>protected</show>
                    <quiet>true</quiet>
                    <doctitle>
                        Topo Data Explorer - Programmieren 2
                    </doctitle>
                    <bottom>Copyright &amp;copy; 2026 SG-Informatik</bottom>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <!-- configure for checkstyle report generation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle.version}</version>
                <configuration>
                    <!-- IMPORTANT:
                         use the same configuration as for the build -->
                    <violationSeverity>warning</violationSeverity>
                    <configLocation>config/fhnw_checks.xml</configLocation>
                    <suppressionsLocation>${checkstyle.config.dir}/suppressions.xml</suppressionsLocation>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>

            </plugin>

        </plugins>

    </reporting>


    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commons-csv.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
